--- a/puppet/modules/postgresql/templates/pg_hba.conf.erb
+++ b/puppet/modules/postgresql/templates/pg_hba.conf.erb
@@ -87,11 +87,11 @@ local   all             postgres                                peer
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
 
 # "local" is for Unix domain socket connections only
-local   all             all                                     peer
+local   all             all                                     trust
 # IPv4 local connections:
-host    all             all             127.0.0.1/32            md5
+host    all             all             127.0.0.1/32            trust
 # IPv6 local connections:
-host    all             all             ::1/128                 md5
+host    all             all             ::1/128                 trust
 
 # site-specific access control list
 <% acl.each do |entry| -%>
